# claude-code-plugins

./: .deepsource.toml  .gitignore  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  README.md
.claude-plugin/: plugin.json
.github/workflows/: contract-models-release.yml  tests.yml
agents/: connector-provider-researcher.md  connector-schema-validator.md
contract-models/: pyproject.toml
contract-models/k2m/: _identity.py
contract-models/k2m/models/: connection.py  connector_client.py  stream.py
contract-models/k2m/models/pipelines/: config.py
contract-models/k2m/models/shared/: types.py
docs/design/: contract-derived-research.md  drift-audit.md
plugins/analitiq-connector-builder/: README.md
plugins/analitiq-connector-builder/agents/: connector-provider-researcher.md  connector-schema-validator.md  db-connector-creator.md
schemas/: canonical-types.json
schemas/api-endpoint/: 14.1.0.json  15.0.0.json  index.json  latest.json
schemas/connector/: latest.json
schemas/database-endpoint/: 12.0.0.json  latest.json
schemas/stream/: 16.0.0.json  latest.json
schemas/type-map-read/: 3.0.0.json  latest.json
schemas/type-map-write/: 3.0.0.json  latest.json
scripts/: check_engine_grammar_pin.py  check_validator_pin_contract.py  render_schemas.py  validate_connector.py
skills/connector-builder/references/: io-contracts.md
src/.claude-plugin/: plugin.json
src/agents/: api-connector-creator.md  connector-schema-validator.md  db-connector-creator.md
tests/connector_builder/: _pins.py  test_advisory_sync.py  test_provider_facts_guard.py  test_schema_drift.py  test_validator_pin_guard.py
tests/connector_validator/: test_schema_drift.py  test_spec_doc_examples.py  test_validator.py
tests/pipeline_builder/: test_type_map_gaps.py
tests/schema_drift/: _pins.py  test_advisory_sync.py  test_examples_validate.py  test_schema_drift.py
tests/schemas/: test_canonical_types_render.py  test_engine_grammar_guard.py
validator/: README.md  pyproject.toml
validator/src/: analitiq_connector_validator.py
(+16 files in other folders)
