[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "analitiq-contract-models"
version = "0.2.0"
description = "Analitiq connector/endpoint contract models (Pydantic) — the single source the published JSON Schemas and the connector validator both derive from."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Analitiq" }]
keywords = ["analitiq", "connector", "contract", "pydantic", "validation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
# External deps. The models are pure Pydantic — no AWS/boto3/private code. The
# connection/stream/pipeline authored models are included: their sole boto3
# coupling (identifier helpers) was moved to the boto3-free `k2m._identity`
# module, staged alongside the models, so the engine can validate control-plane
# config offline against the canonical shapes.
# `tzdata` ships the IANA timezone database: `PipelineInput`'s schedule validator
# checks `zoneinfo.available_timezones()`, which is empty on hosts without a
# system tzdb (Windows / minimal containers) — so a valid `timezone: "UTC"` would
# fail offline. Bundling tzdata makes validation self-contained everywhere.
dependencies = ["pydantic>=2.12,<3", "tzdata"]

[project.urls]
Homepage = "https://github.com/analitiq-ai/claude-plugin-connector"
Issues = "https://github.com/analitiq-ai/claude-plugin-connector/issues"

# Ships the boto3-free `k2m.models` subset (connector, endpoints, type-maps,
# stream, connection, pipeline + their shared blocks) plus the `k2m._identity`
# helpers they depend on. Canonical source is the analitiq-ai/infrastructure
# repo's alq-models / alq-common layers, staged verbatim by scripts/build.py on
# release — one implementation, no re-authoring.
[tool.setuptools]
packages = ["k2m", "k2m.models", "k2m.models.pipelines", "k2m.models.shared"]
